# portfolio-tracker-script

./: .gitignore  LICENSE  Makefile  README.md  benchmark_script.py  main.py  mf_data.py  mf_data_reader.py  pyproject.toml  pyvenv.cfg  requirements.txt  sample.xlsx  script-2.py  script.py
apis/: google_sheets_client.py  mf_api_client.py
enums/: Asset.py  TransactionType.py
features/: mf_asset_value.py  mf_monthly_asset_value.py  mf_summary.py  process_transactions.py  test_connection.py
models/: asset_value.py  mf_price.py  mf_property.py  mf_transaction.py
services/: asset_value_service.py  mf_data_service.py  mf_performance_service.py  mf_properties_service.py
utils/: dates.py  files.py  functions.py  logger.py
